# napari_workflow_hackathon_2022

./: .gitignore  LICENSE  README.md  input_folder_func.ipynb  setup.cfg  tox.ini
notebooks/: Untitled.ipynb  create_workflow_and_exchange_input.ipynb  document.yaml  input_folder_func.ipynb  openworkflow.ipynb  saveworkflow.ipynb  workflow.pickle
src/napari_batchify_workflows/: __init__.py  _dock_widget.py  _open_files.py
src/napari_batchify_workflows/_tests/: test_dock_widget.py  test_function.py
workflows/: workflow.yml
