[metadata]
name = napari-batchify-workflows
version = 0.0.1
author = Johannes Müller
author_email = johannes_richard.mueller@tu-dresden.de

license = BSD-3-Clause
description = A plugin to batch-execute workflows from the napari-workflows
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Development Status :: 2 - Pre-Alpha
    Intended Audience :: Developers
    Framework :: napari
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Operating System :: OS Independent
    License :: OSI Approved :: BSD License


[options]
packages = find:
python_requires = >=3.7
package_dir =
    =src

# add your package requirements here
install_requires =
    napari-plugin-engine>=0.1.4
    numpy

[options.packages.find]
where = src

[options.entry_points] 
napari.plugin = 
    napari-batchify-workflows = napari_batchify_workflows
